feat: add tests, CI, DTOs and registration Saga flow